<resources>
    <string name="app_name">Market Place</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txtLogin">Login</string>
    <string name="register">Register</string>
    <string name="password_register">Password</string>
    <string name="phone_number_register">Phone Number</string>
    <string name="email_register">Email</string>
    <string name="name_register">Name</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="google">Google</string>
    <string name="hp">Hp</string>
    <string name="Handphone">Handphone</string>
    <string name="submit">SUBMIT</string>
    <string name="sign_out">Sign Out</string>
    <string name="market_place">Market Place</string>
    <string name="text_message_username">Please write your username</string>
    <string name="text_message_email">Please write your email</string>
    <string name="text_message_password">Please write your password</string>
    <string name="text_message_hp">Please write your phone number</string>
    <string name="text_user">User</string>
    <string name="text_error_message">"Error Message: "</string>
</resources>